created a new component card and moved everything out of app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,3 @@
-<div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="assets/images/tree.jpg" alt="Big Tree" />
-    </figure>
-  </div>
-  <!--content-->
-  <div class="card-content">
-    <div class="media-content">
-      <p class="title is-4">
-        Neat Tree
-      </p>
-      <p class="subtitle is-6">
-        @NeatTree
-      </p>
-      <div class="content">
-        Saw this awesome tree while hiking
-      </div>
-    </div>
-  </div>
-</div>
+<app-card></app-card>
+
+
