style fixing top center

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="centered">
+<div class="column">
+  <div class="is-horizontal">
 <app-card 
   [title]="posts[0].title" 
   [imageUrl]="posts[0].imageUrl" 
@@ -25,5 +28,8 @@
 <app-card [title]="posts[3].title" [imageUrl]="posts[3].imageUrl" [handle]="posts[3].handle" [alt]="posts[3].alt"
   [action]="posts[3].action"></app-card>
 
+</div>
+</div>
+</div>
 <p>looping through *ngFor</p>
 <app-ng-for-card></app-ng-for-card>
