--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -3,5 +3,9 @@
     padding: 10px;
     border: 2px solid rgb(150, 150, 150) !important;
     width: 350px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 100%;
+    text-overflow: scroll;
 }
 
