modification to card application

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-image">
-      <figure class="image is-4by3">
-        <img [src]="imageUrl" alt="Big Tree" />
+      <figure class="image">
+        <img [src]="imageUrl"  alt="Big Tree" />
       </figure>
     </div>
     <!--content-->
@@ -21,3 +21,12 @@
       </div>
     </div>
   </div>
+
+
+  <!-- 
+    [author] = "post.author"
+  [year] = "post.year"
+  [language]="post.language"
+  [instock]="post.instock"
+  [description]="post.description"
+  [imageUrl]="post.imageUrl" -->
