--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,5 @@
-.is-horizontal {
+:host {
     display: flex;
-    justify-content: center;
-}
-
-.centered {
-    height: 60vh;
-    padding: 0;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items:center;
-}
-
-.centered2 {
-
-    padding: 0;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items:center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
