--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,40 @@
-<div class="centered">
-<div class="column">
-  <div class="is-horizontal">
-<app-card 
-  [title]="posts[0].title" 
-  [imageUrl]="posts[0].imageUrl" 
-  [handle]="posts[0].handle" 
-  [alt]="posts[0].alt"
-  [action]="posts[0].action"
-></app-card>
+<div class="is-flex-direction-column">
+  <div class="columns">
+      <app-card [title]="posts[0].title" [imageUrl]="posts[0].imageUrl" [handle]="posts[0].handle" [alt]="posts[0].alt"
+        [action]="posts[0].action" class="column"></app-card>
+      <app-card [title]="posts[1].title" [imageUrl]="posts[1].imageUrl" [handle]="posts[1].handle" [alt]="posts[1].alt"
+        [action]="posts[1].action" class="column"></app-card>
 
+      <app-card [title]="posts[2].title" [imageUrl]="posts[2].imageUrl" [handle]="posts[2].handle" [alt]="posts[2].alt"
+        [action]="posts[2].action" class="column"></app-card>
 
-<app-card 
-  [title]="posts[1].title" 
-  [imageUrl]="posts[1].imageUrl" 
-  [handle]="posts[1].handle" 
-  [alt]="posts[1].alt"
-  [action]="posts[1].action"
-  ></app-card>
+      <app-card [title]="posts[3].title" [imageUrl]="posts[3].imageUrl" [handle]="posts[3].handle" [alt]="posts[3].alt"
+        [action]="posts[3].action" class="column"></app-card>
+</div>
 
-<app-card 
-  [title]="posts[2].title" 
-  [imageUrl]="posts[2].imageUrl" 
-  [handle]="posts[2].handle" 
-  [alt]="posts[2].alt"
-  [action]="posts[2].action"></app-card>
-
-<app-card [title]="posts[3].title" [imageUrl]="posts[3].imageUrl" [handle]="posts[3].handle" [alt]="posts[3].alt"
-  [action]="posts[3].action"></app-card>
-
+<div class="has-background-primary-dark  text-lg-center mb-4">
+  <h3 class=" text-center ">
+    *ngFor Example
+  </h3>
 </div>
 </div>
+
+<div class="is-flex-direction-column">
+  <div class="columns is-multiline">
+  <app-ng-for-card 
+      *ngFor="let item of posts_ngFor" 
+      [book]="item.book" 
+      [author]="item.author" 
+      [year]="item.year"
+      [language]="item.language" 
+      [inStock]="item.inStock" 
+      [description]="item.description" 
+      [imageUrl]="item.imageUrl"
+      class="column is-one-quarter"
+    >
+  </app-ng-for-card>
 </div>
-<p>looping through *ngFor</p>
-<app-ng-for-card></app-ng-for-card>
+
+</div>
+
+
